--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Real-Estate-Listings</title>
-    <!-- <script src=""></script> //NEEDS WIERD ANGULAR ROUTE FILE -->
     <script src="vendors/angular.min.js"></script>
     <script src="vendors/angular-route.min.js"></script>
     <script src="scripts/client.js"></script>
-    <script src="scripts/controllers/home.controller.js"></script>
-    <script src="scripts/controllers/rental.controller.js"></script>
-    <script src="scripts/controllers/sales.controller.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <script src="scripts/controllers/home-controller.js"></script>
+    <script src="scripts/controllers/rental-controller.js"></script>
+    <script src="scripts/controllers/sales-controller.js"></script>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body ng-app="myApp">
     <header>
         <nav>
-            <li><a href="views/home.html">HOME</a></li>
-            <li><a href="views/rental.html">RENTALS LISTINGS</a></li>
-            <li><a href="views/sales.html">HOME SALE LISTINGS</a></li>
+            <li><a href="/">HOME</a></li>
+            <li><a href="#!/rental">RENTALS LISTINGS</a></li>
+            <li><a href="#!/sales">HOME SALE LISTINGS</a></li>
         </nav>
     </header>
+    <!-- <div ng-view=""></div> -->
     <ng-view></ng-view>
 </body>
 </html>
