ngRoute is still not loading

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body ng-app="myApp">
+        {{ 2 === 2 }}
     <header>
         <nav>
             <li><a href="/">HOME</a></li>
@@ -21,7 +22,6 @@
             <li><a href="#!/sales">HOME SALE LISTINGS</a></li>
         </nav>
     </header>
-    <!-- <div ng-view=""></div> -->
-    <ng-view></ng-view>
+    <ng-view>is this thing on?</ng-view>
 </body>
 </html>
