--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,10 +11,11 @@
     <script src="scripts/controllers/home-controller.js"></script>
     <script src="scripts/controllers/rental-controller.js"></script>
     <script src="scripts/controllers/sales-controller.js"></script>
+    <link rel="stylesheet" href="vendors/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body ng-app="myApp">
-        {{ 2 === 2 }}
+<body ng-app="myApp" class="container">
+        <!-- {{ 2 === 2 }} -->
     <header>
         <nav>
             <li><a href="/">HOME</a></li>
