added some styling

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -17,12 +17,12 @@
 <body ng-app="myApp" class="container">
         <!-- {{ 2 === 2 }} -->
     <header>
-        <nav>
+        <nav class="header">
             <li><a href="/">HOME</a></li>
             <li><a href="#!/rental">RENTALS LISTINGS</a></li>
             <li><a href="#!/sales">HOME SALE LISTINGS</a></li>
         </nav>
     </header>
-    <ng-view>is this thing on?</ng-view>
+    <ng-view></ng-view>
 </body>
 </html>
