--- a/server/public/index.html
+++ b/server/public/index.html
@@ -18,9 +18,7 @@
         <!-- {{ 2 === 2 }} -->
     <header>
         <nav class="header">
-            <li><a href="/">HOME</a></li>
-            <li><a href="#!/rental">RENTALS LISTINGS</a></li>
-            <li><a href="#!/sales">HOME SALE LISTINGS</a></li>
+            <a href="/">HOME</a><a href="#!/rental">RENTALS LISTINGS</a><a href="#!/sales">HOME SALE LISTINGS</a>
         </nav>
     </header>
     <ng-view></ng-view>
